Fixed CSS for HTML align=right attribute

--- a/src/core/editor/editor.scss
+++ b/src/core/editor/editor.scss
@@ -71,7 +71,7 @@
   margin: 0;
   padding: 0 1020px 360px 1050px;
 
-  .cl-preview-section > :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) {
+  .cl-preview-section > :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not([align]) {
     text-align: justify;
   }
 
